2007-03-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	Fix for wrong display of subdirs files selected with SPACE

2007-03-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	Fixed problem #412162 (build with --enable-python=no)

2007-03-12  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Display total size of files in subirs selected with SPACE

2007-03-11  Dušan Hokův  <dusan@mirc.cz>

	* src/gnome-cmd-main-win.cc:
	Made i18n for toolbar tips working again

2007-03-06  Piotr Eljasiak  <epiotr@use.pl>

	* po/POTFILES.in:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	* src/main.cc:
	* src/utils.cc:
	Initial support for user defined shortcuts (via configuration file)

2007-03-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/dict.cc:
	* srcdict.h:
	Generic dictionary class (std::string <-> typename T)

2007-03-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	Added app name to "_Open" item in RMB menu

2007-02-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/useractions.cc:
	* src/utils.cc:
	* src/utils.h:
	C++: inline the most popular functions

	* src/gnome-cmd-advrename-lexer.l:
	Migration to C++

	* src/*.cc:
	C++: add 'using namespace std'

2007-02-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	Fixed problem with RMB popoup menu.

2007-02-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/*.{c,h}:
	Migration to C++

2007-02-20  <lizard@blue.dyn-o-saur.com>

	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-smb-auth.c:
	* src/gnome-cmd-smb-auth.h:
	* src/main.c:
	Added SMB authentication

2007-02-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.c:
	* src/gnome-cmd-dir.h: